# tt_detector

./: .gitignore  README.md  main.py  pyproject.toml
models/: spin_best.ckpt  surface_best.ckpt
notebook/: 01_signal_analysis.ipynb  02_classification.ipynb
src/: audio_utils.py  classifier.py  dataset.py  detector.py  plot_helper.py  plots.py  train_classifier.py
src/classifier/: cnn.py  sig_class.py
src/dataset/: datamodule.py  dataset.py
src/detectors/: DADetector.py  __init__.py  base.py  energy_calculator.py  new_detectors.py  other_detectors.py
